# mlflow_for_ml_dev

./: .gitignore  01_create_experiment.py  02_retrieve_experiments.py  03_deleting_experiments.py  04_mlflow_runs.py  05_mflow_runs2.py  06_mlflow_runs3.py  07_logging_parameters.py  08_logging_metrics.py  09_logging_artifacts.py  10_logging_artifacts2.py  11_logging_images.py  12_logging_models.py  13_logging_models.py  14_inference.py  15_inference2.py  16_nested_runs.py  17_custom_models.py  18_model_schema.py  19_serving_multiple_models.py  20_online_inference.py  21_model_registry.py  22_model_registry_operations.py  23_model_registry_operations.py  24_hyperopt_mlfllow.py  README.md  compose.yaml  mlflow_utils.py  poetry.toml  pyproject.toml  requirements.txt
.github/workflows/: release.yaml  version.yaml
_jupyter/: Dockerfile
custom_functions/: 1_custom_functions.ipynb  3_custom_function_wrapping_multiple_models.ipynb
demo_project/: batch_inference.py  online_inference.py  run.bat  run.py
demo_project/package/: setup.py
docker/jupyter/: Dockerfile
docker/mlflow/: Dockerfile
examples/: README.md  entrypoint.py
examples/diabetes_prediction/: inference.py  online_inference.py  train.py
examples/diabetes_prediction/core/: base.py  data.py  pipeline.py
examples/digit_recognition/: data.py  inference.py  online_inference.py  train.py  utils.py
examples/handwritten_digits/: data.py
examples/iris_classifier/: data.py  inference.py  online_inference.py  train.py
examples/iris_classifier/inference_results/: inference_results.json  test_data.json
examples/iris_inference_server/: __init__.py  load_model.py  routers.py  schemas.py
examples/multi_model/: entrypoint.py  pipeline.py  utils.py
examples/student_performance/: entrypoint.py
examples/student_performance/notebooks/: eda.ipynb
examples/student_performance/src/: data_processing.py  pipelines.py
examples/utils/: decorators.py  file_utils.py  mlflow_utils.py
examples/walmart_sales_regression/: base.py  configs.yaml  data.py  inference.py  online_inference.py  train.py
experiments/: 1_main_concepts.ipynb  2_retrieve_experiments.ipynb  3_restore_experiment.ipynb
mlflow_for_ml_dev/experiments/: custom_models.py  exp_utils.py
mlflow_for_ml_dev/notebooks/: 1_4_experiments_update_experiments.ipynb  2_3_runs_update_run.ipynb  2_4_runs_delete_run.ipynb  3_1_login_functions.ipynb  3_2_logging_models.ipynb  3_3_model_signature.ipynb  3_4_tracking_datasets.ipynb  4_1_log_custom_functions.ipynb  5_1_registering_a_model.ipynb  5_2_update_registered_model.ipynb  5_3_update_model_version.ipynb  5_5_loading_registered_models.ipynb  5_5_retrieve_model_info.ipynb  5_6_delete_registered_model_info.ipynb  6_2_searching_runs.ipynb  6_3_searching_models.ipynb
mlflow_for_ml_dev/notebooks/custom_models/: 1_custom_functions.ipynb  2_custom_function_model_drift_usecase.ipynb  training_data.csv
mlflow_for_ml_dev/notebooks/examples/: 1_1_iris_plants.ipynb
mlflow_for_ml_dev/notebooks/experiment_tracking_fundamentals/: 1_1_experiments_create_experiments.ipynb  1_1_experiments_main_concepts.ipynb  1_2_experiments_create_experiments.ipynb  1_2_experiments_retrieve_experiments.ipynb  1_3_experiments_retrieve_experiments.ipynb  1_3_experiments_update_experiments.ipynb  1_4_experiments_delete_experiments.ipynb  1_4_experiments_update_experiments.ipynb  1_5_experiments_delete_experiments.ipynb  2_1_runs_create_run.ipynb  2_2_runs_retrieve_run.ipynb  2_3_runs_update_run.ipynb  2_4_runs_delete_run.ipynb  2_4_runs_nested_runs.ipynb  2_5_runs_delete_run.ipynb  3_1_login_functions.ipynb  3_2_logging_models.ipynb  3_3_model_signature.ipynb  3_4_signature_enforcement.ipynb  3_4_tracking_datasets.ipynb  4_1_log_custom_functions.ipynb  4_2_custom_functions_context.ipynb  5_1_registering_a_model.ipynb  5_2_update_registered_model.ipynb  5_3_update_model_version.ipynb  5_4_retrieve_model_info.ipynb  5_5_loading_registered_models.ipynb  5_6_delete_registered_model_info.ipynb  6_1_searching_experiments.ipynb  6_2_searching_runs.ipynb  6_3_searching_models.ipynb
mlflow_for_ml_dev/notebooks/experiments/: 1_main_concepts.ipynb  2_retrieve_experiments.ipynb  3_restore_experiment.ipynb  test.ipynb
mlflow_for_ml_dev/notebooks/local_model_serving/: deploying_local_diabetes_prediction.ipynb  deploying_local_digit_recognizer.ipynb  deploying_local_iris_model.ipynb  (+1 more)
mlflow_for_ml_dev/utils/: hello_world.py  utils.py
mlflow_tags_and_aliases/: getting_started.py
mlruns/0/: meta.yaml
mlruns/896296360431059581/: meta.yaml
notebooks/: exploration.ipynb
notebooks/live_coding/: default_experiment.ipynb
notebooks/model_registry/: 1_registering_a_model.ipynb  2_registering_a_model.ipynb  3_registering_a_model.ipynb  4_update_registered_model.ipynb  7_retrieving_registered_models.ipynb
notebooks/searching/: 1_search_experiments.ipynb  2_search_runs.ipynb  3_search_models.ipynb
runs/: 1_create_run.ipynb  2_logging_functions.ipynb  3_example.ipynb  4_logging_models.ipynb
traditional_ml_evaluation/: getting_started.ipynb
(+305 files in other folders)
